--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
           <div class="d-flex gap-2 mb-3">
             <a class="btn btn-primary btn-sm" href="#projects">View Projects</a>
-            <a class="btn btn-outline-primary btn-sm" href="D:\port\Professional Modern CV Resume (2).pdf" target="_blank">Download Resume</a>
+            <a class="btn btn-outline-primary btn-sm" href="Professional Modern CV Resume (2).pdf">Download Resume</a>
           </div>
 
           <div class="d-flex gap-3 align-items-center mt-3">
@@ -379,3 +379,4 @@
   </script>
 </body>
 </html>
+
